<resources>
    <string name="app_name"></string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_store_home_page"></string>
    <string name="title_activity_edit_information">EditInformationActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="title_activity_detail_product"></string>
    <string name="title_activity_shopping_cart"></string>
    <string name="menu_home">Home</string>
    <string name="menu_login">Login</string>
    <string name="menu_sign_up">Sign Up</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_history">History</string>
    <string name="menu_logout">Logout</string>
    <string name="title_activity_change_password">ChangePasswordActivity</string>
    <string name="title_activity_information">InformationActivity</string>
</resources>
