<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_store_black_24dp"
            android:title="@string/menu_home" />
    <item android:title="Welcome guest" android:id="@+id/not_logged">
        <menu>
            <item
                android:id="@+id/nav_login"
                android:icon="@drawable/ic_person_black_24dp"
                android:title="@string/menu_login" />
            <item
                android:id="@+id/nav_sign_up"
                android:icon="@drawable/ic_person_add_black_24dp"
                android:title="@string/menu_sign_up" />
        </menu>
    </item>
    <item android:title="Welcome user" android:id="@+id/logged">
        <menu>
            <item
                android:id="@+id/nav_profile"
                android:icon="@drawable/ic_person_black_24dp"
                android:title="@string/menu_profile" />

            <item
                android:id="@+id/nav_history"
                android:icon="@drawable/ic_history_black_24dp"
                android:title="@string/menu_history" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_exit_to_app_black_24dp"
                android:title="@string/menu_logout" />
        </menu>
    </item>
</menu>
